# victus-hub

./: .gitignore  README.md  RGBMODULE.md  install.sh  pyproject.toml  requirements.txt  uninstall.sh
data/: hp-helperd.service  victus-hubd.service
hp_helper/: __main__.py  api.py  fan_control.py  fan_curves_window.py  gpu_mux.py  icon_utils.py  keyboard_lighting.py  keyboard_shortcut.py  lighting_controller.py  main.py  main_window.py  power_controller.py  power_limits.py  sensor_definitions.py  sensor_graph_window.py  sensor_stats.py  shortcut_controller.py
hp_helper/app/: icon_utils.py  main_window.py  power_state.py  single_instance.py  theme.py
hp_helper/backend/: daemon_client.py  fan_config.py  hardware.py  modules.py  nvidia.py  profiles.py  protocol.py  rapl.py  sensors.py  sysfs_read.py  types.py  util.py
hp_helper/pages/: fans_power_page.py  home_page.py  keyboard_page.py  processes_page.py  sensors_page.py  settings_page.py
hp_helper/resources/: style.qss
hp_helper/services/: fan_control.py  lighting_controller.py  power_controller.py  shortcut_controller.py
hp_helper/widgets/: app_button.py  fan_chart.py  footer.py  gauge_dial.py  gpu_mux_control.py  profile_section.py  section_title.py  segmented_control.py  sensor_line_graph.py  sidebar.py  (+4 more)
hp_helperd/: __main__.py  daemon.py  ryzenadj.py  sysfs.py
scripts/: dev-run  install  kmod-prompts.sh  ryzenadj-install  ryzenadj-uninstall  ui-test  uninstall
tests/: test_fan_control.py  test_nvidia_temp.py
victus_hub/: __main__.py  api.py  main.py
victus_hubd/: __main__.py  daemon.py  sysfs.py
(+61 files in other folders)
