[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "hp-helper"
version = "0.1.0"
description = "HP Laptop Control Panel"
requires-python = ">=3.9"
dependencies = [
    "pyside6>=6.8",
]

[project.scripts]
hp-helper = "hp_helper.main:main"

[tool.setuptools.packages.find]
include = ["hp_helper*", "hp_helperd*"]
