[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "victus-hub"
version = "0.1.0"
description = "HP Laptop Control Panel"
requires-python = ">=3.9"
dependencies = [
    "pyside6>=6.8",
]

[project.scripts]
victus-hub = "victus_hub.main:main"

[tool.setuptools.packages.find]
include = ["victus_hub*", "victus_hubd*"]
